Update Apicurio Registry build config

--- a/pme.properties
+++ b/pme.properties
@@ -55,4 +55,4 @@ atlasmap.pme.options=-DdependencyExclusion.com.sun.xml.bind:*@*= -DdependencyExc
 syndesis.pme.options=-DprojectMetaSkip=true --file=app/pom.xml -DdependencyExclusion.com.fasterxml.jackson.core:*@*= -DdependencyExclusion.com.fasterxml.jackson:*@*= -DdependencyExclusion.com.fasterxml.jackson.dataformat:*@*= -DdependencyExclusion.com.fasterxml.jackson.datatype:*@*= -DdependencyExclusion.com.fasterxml.jackson.module:*@*=
 
 # Fuse Service Registry
-apicurio-registry.pme.options=-DpluginSource=NONE -DdependencyOverride.io.apicurio:apicurio-data-models@*=1.0.14.Final-redhat-00001
+apicurio-registry.pme.options=-DpluginSource=NONE
