--- a/src/main/resources/images.yaml
+++ b/src/main/resources/images.yaml
@@ -66,7 +66,7 @@ builds:
   scmUrl: git+ssh://code.engineering.redhat.com/jboss-fuse/apicurio-registry.git
   externalScmUrl: ssh://git@github.com/jboss-fuse/apicurio-registry.git
   scmRevision: apicurio-registry-${version.apicurio-registry}
-  buildScript: 'mvn -B clean deploy dependency:tree -DskipTests -Pprod -Pkafka'
+  buildScript: 'mvn -B clean deploy dependency:tree -DskipTests -Pprod -Pkafka -Pjpa'
   customPmeParameters:
     - ${apicurio-registry.pme.options}
 
