--- a/src/main/resources/dv.yaml
+++ b/src/main/resources/dv.yaml
@@ -70,6 +70,7 @@ flow:
   repositoryGeneration:
     strategy: BUILD_GROUP
     sourceBuild: teiid-spring-boot-${version.fuse.prefix}
+    includeLicenses: true
     
   javadocGeneration:
     strategy: GENERATE
