--- a/src/main/resources/basetest.yaml
+++ b/src/main/resources/basetest.yaml
@@ -5,14 +5,14 @@ product:
   issueTrackerUrl: http://issues.jboss.org/browse/ENTESB
 version: ${version.fuse.prefix}
 milestone: ${build.milestone}
-group: Red Hat Fuse - Base ${version.fuse.project} TP2 ${build.milestone}
+group: Red Hat Fuse - BaseTest ${version.fuse.project} TP2 ${build.milestone}
 defaultBuildParameters:
   environmentId: 21
   buildScript: 'mvn -e -V -B -DskipTests -DfailIfNoTests=false -Dtest=false clean
     deploy'
 
 builds:
-- name: camel-3.5.0-${version.fuse.prefix}
+- name: camel-3.4.0-${version.fuse.prefix}
   project: jboss-fuse/camel
     #fetchScmUrl: ${camel.fetch.scmUrl}
     #pushScmUrl: ${camel.push.scmUrl}
@@ -36,8 +36,10 @@ builds:
   extraRepositories:
     - http://resources.knopflerfish.org/repo/maven2/release/
     - http://packages.confluent.io/maven/
-    
-- name: camel-quarkus-1.0.0.CR3-${version.fuse.prefix}
+  dependencies:
+  - cxf-3.3.6-${version.fuse.prefix}
+
+- name: camel-quarkus-1.1.0-${version.fuse.prefix}
     #fetchScmUrl: ${camel-quarkus.fetch.scmUrl}
     #pushScmUrl: ${camel-quarkus.push.scmUrl}
     #tag: camel-quarkus-${version.camel-quarkus}
@@ -56,9 +58,9 @@ builds:
   alignmentParameters:
     - ${camel-quarkus.pme.options}
   dependencies:
-    - camel-3.5.0-${version.fuse.prefix}
+    - camel-3.4.0-${version.fuse.prefix}
 
-- name: camel-k-runtime-1.4.1-${version.fuse.prefix}
+- name: camel-k-runtime-1.5.0-${version.fuse.prefix}
     #fetchScmUrl: ${camel-k-runtime.fetch.scmUrl}
     #pushScmUrl: ${camel-k-runtime.push.scmUrl}
     #tag: camel-k-runtime-${version.camel-k-runtime}
@@ -74,8 +76,8 @@ builds:
   alignmentParameters:
     - ${camel-k-runtime.pme.options}
   dependencies:
-    - camel-3.5.0-${version.fuse.prefix}
-    - camel-quarkus-1.0.0.CR3-${version.fuse.prefix}
+    - camel-3.4.0-${version.fuse.prefix}
+    - camel-quarkus-1.1.0-${version.fuse.prefix}
 
 - name: camel-k-${version.fuse.prefix}
     #fetchScmUrl: ${camel-k.fetch.scmUrl}
@@ -93,10 +95,11 @@ builds:
   alignmentParameters:
     - ${camel-k.pme.options}
   dependencies:
-    - camel-3.5.0-${version.fuse.prefix}
-    - camel-quarkus-1.0.0.CR3-${version.fuse.prefix}
-    - camel-k-runtime-1.4.1-${version.fuse.prefix}
+    - camel-3.4.0-${version.fuse.prefix}
+    - camel-quarkus-1.1.0-${version.fuse.prefix}
+    - camel-k-runtime-1.5.0-${version.fuse.prefix}
 
+    
 outputPrefixes:
   releaseFile: fuse-test
   releaseDir: fuse-test
