Add -Pdeploy so we build sources if we need another build

--- a/src/main/resources/camelquarkus.yaml
+++ b/src/main/resources/camelquarkus.yaml
@@ -70,7 +70,7 @@ builds:
   buildScript: >
     export MAVEN_OPTS="-Xmx8000m"
 
-    mvn -B clean deploy -Dcq.prod-artifacts.skip=true -Denforcer.skip=true -DskipTests -DaltDeploymentRepository=indy-mvn::${AProxDeployUrl} dependency:tree
+    mvn -B clean deploy -Pdeploy -Dcq.prod-artifacts.skip=true -Denforcer.skip=true -DskipTests -DaltDeploymentRepository=indy-mvn::${AProxDeployUrl} dependency:tree
   alignmentParameters:
     - ${camel-quarkus.pme.options}
   dependencies:
