--- a/src/main/resources/camelk.yaml
+++ b/src/main/resources/camelk.yaml
@@ -72,6 +72,9 @@ flow:
 
   repositoryGeneration:
     strategy: BUILD_GROUP
+    # Exclude the CLI generated in PNC
+    excludeArtifacts:
+    - 'org\.fuse\.camel\.k.*'
   #licensesGeneration: gen.downloadFrom 'karaf' matching '.*license\.zip'
   #licensesGeneration: gen.generate()
   #repositoryGeneration: gen.downloadFrom 'karaf' matching '.*-m2repo\.zip'
