--- a/src/main/resources/ipaas.yaml
+++ b/src/main/resources/ipaas.yaml
@@ -21,6 +21,7 @@ builds:
     #externalScmUrl: git+https://code.engineering.redhat.com/gerrit/syndesisio/syndesis.git
   scmUrl: git+ssh://code.engineering.redhat.com/jboss-fuse/syndesis.git
   scmRevision: syndesis-${version.syndesis}
+  brewPullActive: true
   buildPodMemory: 12
   environmentId: 34
   alignmentParameters:
