gerrit migration: change all code.eng references to gitlab.cee.redhat.com

--- a/pom.xml
+++ b/pom.xml
@@ -413,7 +413,7 @@
            <replacements>
                <replacement>
                    <token>code.engineering</token>
-                   <value>code.stage.engineering</value>
+                   <value>gitlab.cee.redhat.com/pnc-workspace/</value>
                </replacement>
            </replacements>
        </configuration>
