--- a/src/main/resources/ipaas.yaml
+++ b/src/main/resources/ipaas.yaml
@@ -18,8 +18,7 @@ builds:
     #pushScmUrl: ${syndesis.push.scmUrl}
     #tag: ${syndesis.tag}
     #buildCommand: ${syndesis.buildCommand}
-    #externalScmUrl: git+https://code.engineering.redhat.com/gerrit/syndesisio/syndesis.git
-  scmUrl: git+ssh://code.engineering.redhat.com/jboss-fuse/syndesis.git
+  scmUrl: git@gitlab.cee.redhat.com:pnc-workspace/jboss-fuse/syndesis.git
   scmRevision: syndesis-${version.syndesis}
   buildPodMemory: 12
   environmentId: 662
