--- a/src/main/resources/ipt.yaml
+++ b/src/main/resources/ipt.yaml
@@ -17,7 +17,7 @@ builds:
     #tag: apicurio-registry-${version.apicurito-registry}
     #buildCommand: ${apicurito-registry.buildCommand}
   project: jboss-fuse/apicurio-registry
-  scmUrl: git+ssh://code.engineering.redhat.com/jboss-fuse/apicurio-registry.git
+  scmUrl: git@gitlab.cee.redhat.com:pnc-workspace/jboss-fuse/apicurio-registry.git
   externalScmUrl: ssh://git@github.com/jboss-fuse/apicurio-registry.git
   scmRevision: apicurio-registry-${version.apicurio-registry}
   buildScript: >
